--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,42 @@
-# Nuxt dev/build outputs
-.output
-.data
-.nuxt
-.nitro
-.cache
-dist
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Node dependencies
-node_modules
+# dependencies
+/node_modules
+/studio/node_modules
+/.pnp
+.pnp.js
+.yarn/install-state.gz
 
-# Logs
-logs
-*.log
+# testing
+/coverage
 
-# Misc
+# next.js
+/.next/
+/out/
+
+# sanity
+/.sanity/
+/dist/
+
+# misc
 .DS_Store
-.fleet
-.idea
+*.pem
 
-# Local env files
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# local env files
+.env*.local
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
+
+# Env files created by scripts for working locally
 .env
-.env.*
-!.env.example
+.env.local
