--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^20.14.13",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/three": "^0.168.0",
     "@vercel/speed-insights": "^1.0.12",
     "date-fns": "^3.6.0",
     "next": "^14.2.5",
@@ -31,6 +32,7 @@
     "sanity": "^3.54.0",
     "sanity-plugin-asset-source-unsplash": "^3.0.1",
     "server-only": "^0.0.1",
+    "three": "^0.168.0",
     "typescript": "5.5.4"
   },
   "devDependencies": {
