--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18.3.1",
     "sanity": "^3.54.0",
     "sanity-plugin-asset-source-unsplash": "^3.0.1",
+    "sanity-plugin-media": "^2.3.2",
     "server-only": "^0.0.1",
     "typescript": "5.5.4"
   },
