--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "typegen": "sanity schema extract && sanity typegen generate"
   },
   "dependencies": {
+    "@react-three/drei": "^9.112.0",
+    "@react-three/fiber": "^8.17.6",
+    "@react-three/postprocessing": "^2.16.2",
     "@sanity/assist": "^3.0.5",
     "@sanity/icons": "^3.3.1",
     "@sanity/image-url": "^1.0.2",
@@ -22,6 +25,7 @@
     "@types/node": "^20.14.13",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/three": "^0.168.0",
     "@vercel/speed-insights": "^1.0.12",
     "date-fns": "^3.6.0",
     "next": "^14.2.5",
@@ -31,6 +35,7 @@
     "sanity": "^3.54.0",
     "sanity-plugin-asset-source-unsplash": "^3.0.1",
     "server-only": "^0.0.1",
+    "three": "^0.168.0",
     "typescript": "5.5.4"
   },
   "devDependencies": {
