--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/three": "^0.168.0",
     "@vercel/speed-insights": "^1.0.12",
     "date-fns": "^3.6.0",
+    "embla-carousel-react": "^8.2.1",
     "next": "^14.2.5",
     "next-sanity": "^9.4.5",
     "react": "^18.3.1",
