--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react-dom": "^18.3.0",
     "@types/three": "^0.168.0",
     "@vercel/speed-insights": "^1.0.12",
+    "blurhash-base64": "^0.0.3",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.2.1",
     "next": "^14.2.5",
