--- a/package.json
+++ b/package.json
@@ -14,38 +14,37 @@
     "typegen": "sanity schema extract && sanity typegen generate"
   },
   "dependencies": {
-    "@react-three/drei": "^9.112.0",
-    "@react-three/fiber": "^8.17.6",
+    "@react-three/drei": "^9.114.0",
+    "@react-three/fiber": "^8.17.8",
     "@react-three/postprocessing": "^2.16.2",
-    "@sanity/assist": "^3.0.5",
-    "@sanity/icons": "^3.3.1",
+    "@sanity/assist": "^3.0.6",
+    "@sanity/icons": "^3.4.0",
     "@sanity/image-url": "^1.0.2",
-    "@sanity/locale-de-de": "^1.1.10",
-    "@sanity/preview-url-secret": "^1.6.18",
-    "@sanity/vision": "^3.54.0",
-    "@types/node": "^20.14.13",
-    "@types/react": "^18.3.3",
+    "@sanity/locale-de-de": "^1.1.11",
+    "@sanity/preview-url-secret": "^1.6.21",
+    "@sanity/vision": "^3.58.0",
+    "@types/node": "^22.7.2",
+    "@types/react": "^18.3.9",
     "@types/react-dom": "^18.3.0",
     "@types/three": "^0.168.0",
     "@vercel/speed-insights": "^1.0.12",
     "blurhash-base64": "^0.0.3",
-    "date-fns": "^3.6.0",
-    "embla-carousel-react": "^8.2.1",
-    "next": "^14.2.5",
-    "next-sanity": "^9.4.5",
+    "embla-carousel-react": "^8.3.0",
+    "next": "^14.2.13",
+    "next-sanity": "^9.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "sanity": "^3.54.0",
+    "sanity": "^3.58.0",
     "sanity-plugin-asset-source-unsplash": "^3.0.1",
     "sanity-plugin-media": "^2.3.2",
     "server-only": "^0.0.1",
     "three": "^0.168.0",
     "three-pathfinding": "^1.3.0",
-    "typescript": "5.5.4"
+    "typescript": "5.6.2"
   },
   "devDependencies": {
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.5",
-    "gltfjsx": "^6.5.0"
+    "eslint": "*",
+    "eslint-config-next": "^14.2.13",
+    "gltfjsx": "^6.5.2"
   }
 }
