--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "sanity-plugin-asset-source-unsplash": "^3.0.1",
     "sanity-plugin-media": "^2.3.2",
     "server-only": "^0.0.1",
+    "spatial-controls": "^6.1.2",
     "three": "^0.168.0",
     "three-pathfinding": "^1.3.0",
     "typescript": "5.6.2"
