--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@react-three/drei": "^9.114.0",
     "@react-three/fiber": "^8.17.8",
-    "@react-three/postprocessing": "^2.16.2",
+    "@react-three/postprocessing": "benthillerkus/react-postprocessing#n8ao",
     "@sanity/assist": "^3.0.6",
     "@sanity/icons": "^3.4.0",
     "@sanity/image-url": "^1.0.2",
@@ -46,5 +46,6 @@
     "eslint": "*",
     "eslint-config-next": "^14.2.13",
     "gltfjsx": "^6.5.2"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
