--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@react-three/drei": "^9.114.0",
     "@react-three/fiber": "^8.17.8",
-    "@react-three/postprocessing": "benthillerkus/react-postprocessing#n8ao",
+    "@react-three/postprocessing": "^2.16.3",
     "@sanity/assist": "^3.0.6",
     "@sanity/icons": "^3.4.0",
     "@sanity/image-url": "^1.0.2",
